[package]
name = "pkey_mprotect"
description = "Typed `pkey_mprotect` wrapper"
version = "0.1.3"
edition = "2021"
rust-version = "1.57"
repository = "https://github.com/Rexagon/pkey_mprotect"
keywords = ["pkey_mprotect", "mprotect"]
categories = ["memory-management"]
include = ["build.rs", "src/**/*.rs", "src/pkey.c", "README.md", "LICENSE"]
license-file = "./LICENSE"

links = "pkey-sys"
build = "./build.rs"

[dependencies]
libc = "0.2"
log = "0.4"
thiserror = "1.0"

[build-dependencies]
cc = "1.0"
